Wed Jun  1 09:39:47 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/dblib/bcp.c src/tds/bulk.c:
	- fix bcp for queryout

Wed Jun  1 09:03:09 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: fix enumeration name

Fri May 27 11:18:52 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/replacements.h src/apps/bsqldb.c src/apps/freebcp.c:
	* src/apps/tsql.c src/replacements/Makefile.am:
	* src/replacements/getpassarg.c:
	- add and use getpassarg

Fri May 27 10:59:53 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: add -a option to tsql

Fri May 27 10:58:57 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: remove spaces at end of line

Mon May 23 22:31:56 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/tds/login.c: do not mix error codes

Mon May 23 21:27:01 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/dblib.c: fix some return codes

Mon May 23 21:20:11 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/Makefile.am: add tdsproto.h to distribution

Sun May 22 08:34:41 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c reverted part of hasty fix

Sat May 21 14:10:30 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml corrected typos
	* src/dblib/bcp.c relaxed per ML from Bill Thompson today. 

Sat May 21 15:04:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: fix _bcp_get_term_var check

Fri May 20 22:56:24 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsodbc.h include/tdsproto.h:
	* src/odbc/connectparams.c src/odbc/odbc.c src/tds/login.c:
	- prepare for mars support

Fri May 20 22:53:24 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/vstrbuild.c: fix minor tds_vstrbuild issues

Thu May 19 16:56:41 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>